Git_to_Salesforce/ Q-assign/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Assigned_From_Group__c</fullName>
        <label>Assigned From Group</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_From_Queue__c</fullName>
        <description>Assigned from queue</description>
        <label>Assigned From Queue</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assignment_Seq__c</fullName>
        <description>Assignment sequence number</description>
        <label>Assignment Seq</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q_Assign_Exclude__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Exclude from user assignment count</description>
        <label>Q Assign Exclude</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Q_assign_Custom_Seq__c</fullName>
        <description>Q-assign custom assign sequence</description>
        <label>Q-assign Custom Seq</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q_assign_Last_Assigned_Date__c</fullName>
        <description>Q-assign last assigned date</description>
        <label>Q-assign Last Assigned Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reviewed_Days__c</fullName>
        <description>Number of days between Q-assign last assignment date and last modified date</description>
        <formula>LastModifiedDate - Q_assign_Last_Assigned_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q-assign Reviewed Days</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
</CustomObject>